采用xtablayout库支持顶部导航栏下划线宽度和高度控制以及文字大小控制

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     })
     compile project(':loadlibrary')
     compile project(':playerlibrary')
+    compile project(':xtablayoutlibrary')
     compile files('libs/libammsdk.jar')
     compile files('libs/weiboSDKCore_3.1.4.jar')
     compile files('libs/mta-sdk-1.6.2.jar')
