完成所有新增接口调试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,6 +156,9 @@
             android:name=".activity.CraftActivity"
             android:screenOrientation="portrait"></activity>
         <activity
+            android:name=".activity.MaleActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
             android:name=".activity.ChargeActivity"
             android:screenOrientation="portrait"></activity>
         <activity
