--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,8 +106,7 @@
 
         <activity
             android:name=".activity.VideoFullActivity"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|keyboard"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.LoginActivity"
