1.解决视频全屏横竖屏切换的问题 2.首页修改为嗨区和X区 3.修改手机验证界面在兑换话费和输入邀请码界面不同的显示文字

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,8 @@
 
         <activity
             android:name=".activity.VideoFullActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="keyboard|orientation|screenSize"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.LoginActivity"
