1.首页 探索 消息和我的一级界面框架完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -173,6 +173,12 @@
         <activity
             android:name=".activity.MoneyActivity"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.LookActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.PicPreviewActivity"
+            android:screenOrientation="portrait"></activity>
 
 
 
