--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile project(':loadlibrary')
     compile project(':playerlibrary')
     compile project(':xtablayoutlibrary')
+    compile project(':photolibrary')
     compile files('libs/libammsdk.jar')
     compile files('libs/mta-sdk-1.6.2.jar')
     compile files('libs/open_sdk_r5778.jar')
