--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,12 @@ buildscript {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        flatDir {
+            dirs 'libs' //this way we can find the .aar file in libs folder
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +22,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        flatDir {
+            dirs 'libs' //this way we can find the .aar file in libs folder
+        }
     }
 }
 
